Grok changes
************

0.12 (unreleased)
=================

Bug fixes
---------

* Do not register the publishTraverse and browserDefault methods of the
  JSON component as views.

* Methods with names that start with an '_' are not registered as views
  for XMLRPC, REST and JSON components.

* Use a configuration action for the registration of the static directory.

* Fix imports from zope.app.securitypolicy.

* Grok does not raise a GrokError anymore when it finds unassociated
  templates, but will issue a UserWarning.

* Fix https://bugs.launchpad.net/grok/+bug/161948: grok.testing.grok()
  now also loads the ZPT template factories so that unit tests that
  need to configure views with ZPT templates continue to work.

* Changed a few remaining references to ``grok.grok`` and
  ``grok.grok_component`` to their correct equivalents in
  ``grok.testing``.

* ``grok.testing.grok_component()`` could not be used in a pure
  doctest. This needed a bugfix in Martian (since 0.9.2). Add a test
  that demonstrates this problem.

* Fix https://bugs.launchpad.net/grok/+bug/162437: grok.Form and its
  subclasses did not implement IBrowserView.

0.11 (2007-11-08)
=================

Feature changes
---------------

* Integrated skins and layers: ``grok.layer``, ``grok.IGrokLayer``,
  ``grok.Skin``.

* Grok now supports hooking in new template languages without much work.
  See also doc/minitutorials/template-languages.txt. See Restructuring below
  for more techinical info.

* Accessing a template macro via context/@@the_view/the_template is now
  deprecated for the standard ZPT story of using
  context/@@the_view/macro/the_template.

* There is now a grok.direct() directive that can be used on GlobalUtilities
  to mark that the class provides the utility interface directly and need
  no instantiation.

* Removed ``grok.define_permission`` in favor of the
  ``grok.Permission`` component base class. You should now subclass
  this base class to define permissions. See also