@@ -1,9 +1,12 @@
 [buildout]
-develop = . doc grokwiki
+develop = . doc grokwiki martian
 parts = docs interpreter grokwiki zopectl data test
 find-links = http://download.zope.org/distribution/
 extends = versions.cfg
 versions = versions
+
+[versions]
+martian = 0.9.3dev
 
 [docs]
 recipe = zc.recipe.egg
