@@ -1,7 +1,7 @@
 [versions]
 ClientForm = 0.2.7
 docutils = 0.4
-martian = 0.9.2
+martian = 0.9.3
 mechanize = 0.1.7b
 Pygments = 0.8.1
 pytz = 2007g
